IntelliJ told me to fix the tokenizer