@@ -7,6 +7,7 @@ import java.util.regex.*;
 import com.jaiva.errors.TokenizerException.*;
 import com.jaiva.errors.TokenizerException;
 import com.jaiva.lang.*;
+import com.jaiva.tokenizer.Token.*;
 import com.jaiva.tokenizer.Token.TArrayVar;
 import com.jaiva.tokenizer.Token.TBooleanVar;
 import com.jaiva.tokenizer.Token.TCodeblock;
@@ -42,16 +43,16 @@ public class Tokenizer {
      *                   that is the type parameter)
      * @param line       The line
      * @param lineNumber The line's number.
-     * @throws TokenizerException
+     * @throws TokenizerException (Specifically MalformedSyntaxException)
      */
     private static void checkForMalformedConstruct(String construct, String line, int lineNumber)
             throws TokenizerException {
-        if (!construct.equals(Keywords.FOR) && (line.indexOf(Character.toString(Chars.STATEMENT_OPEN)) == -1
-                || line.indexOf(Character.toString(Chars.STATEMENT_CLOSE)) == -1))
+        if (!construct.equals(Keywords.FOR) && (!line.contains(Character.toString(Chars.STATEMENT_OPEN))
+                || !line.contains(Character.toString(Chars.STATEMENT_CLOSE))))
             throw new MalformedSyntaxException(construct + " is missing opening or closing brace, go check it",
                     lineNumber);
 
-        if (line.indexOf(Chars.BLOCK_OPEN) == -1)
+        if (!line.contains(Chars.BLOCK_OPEN))
             throw new MalformedSyntaxException(construct + " is missing the open block thingy, yknow?", lineNumber);
 
         // make sure the closing ) is actually the outmost pair.
@@ -182,7 +183,6 @@ public class Tokenizer {
      * @param multipleLinesOutput The multiple lines output object.
      * @param tokenizerLine       The tokenizer line.
      * @param tokens              The tokens to add to.
-     * @param tContainer          The token container.
      * @param type                The type of block it is.
      * @param args                The arguments for the block.
      * @param blockChain          The block chain object.
@@ -191,7 +191,7 @@ public class Tokenizer {
      */
     private static Object processBlockLines(boolean isComment, String line,
             MultipleLinesOutput multipleLinesOutput,
-            String tokenizerLine, ArrayList<Token<?>> tokens, Token<?> tContainer, String type, String[] args,
+            String tokenizerLine, ArrayList<Token<?>> tokens, String type, String[] args,
             Token<?> blockChain, int lineNumber, TConfig config)
             throws Exception {
         type = multipleLinesOutput == null ? type : multipleLinesOutput.b_type;
@@ -210,6 +210,7 @@ public class Tokenizer {
             if (endCount != startCount)
                 return output;
         }
+        assert output instanceof MultipleLinesOutput;
         MultipleLinesOutput finalMOutput = ((MultipleLinesOutput) output);
         String preLine = finalMOutput.preLine;
         preLine = preLine.startsWith(Keywords.D_FUNCTION) ? preLine.replaceFirst(Keywords.D_FUNCTION, "") : preLine;
@@ -234,22 +235,23 @@ public class Tokenizer {
         } catch (Exception e) {
             e.printStackTrace();
         }
-        TCodeblock codeblock = tContainer.new TCodeblock(nestedTokens, finalMOutput.lineNumber, lineNumber);
+        TCodeblock codeblock = new TCodeblock(nestedTokens, finalMOutput.lineNumber, lineNumber);
         // Okay cool, we've parsed everything, but what if its different types?
         Token<?> specific;
+        assert multipleLinesOutput != null;
         switch (type) {
             case "mara if": {
-                Object obj = tContainer.new TStatement(finalMOutput.lineNumber).parse(args[0]);
+                Object obj = new TStatement(finalMOutput.lineNumber).parse(args[0]);
                 if (Validate.isValidBoolInput(obj)) {
-                    obj = obj instanceof Token<?> ? ((Token<?>) obj).getValue() : obj;
+                    obj = obj instanceof Token<?> ? ((Token<?>) obj).value() : obj;
                 } else {
                     throw new TypeMismatchException(
                             "Ayo the condition in the mara if (" + args[0] + ") gotta resolve to a boolean dawg.",
                             finalMOutput.lineNumber);
                 }
-                TIfStatement ifStatement = tContainer.new TIfStatement(obj, codeblock, finalMOutput.lineNumber);
+                TIfStatement ifStatement = new TIfStatement(obj, codeblock, finalMOutput.lineNumber);
                 TIfStatement originalIf = ((TIfStatement) ((MultipleLinesOutput) multipleLinesOutput).specialArg
-                        .getValue());
+                        .value());
                 originalIf.appendElseIf(ifStatement);
                 specific = originalIf.toToken();
                 if (line.contains(Keywords.ELSE)) {
@@ -259,7 +261,7 @@ public class Tokenizer {
             }
             case "mara": {
                 TIfStatement originalIf = ((TIfStatement) ((MultipleLinesOutput) multipleLinesOutput).specialArg
-                        .getValue());
+                        .value());
                 originalIf.appendElse(codeblock);
                 specific = originalIf.toToken();
                 break;
@@ -267,28 +269,28 @@ public class Tokenizer {
             case "if": {
                 String cond = args[0].replaceFirst(Pattern.quote(Character.toString(Chars.STATEMENT_OPEN)),
                         Matcher.quoteReplacement(" ")).trim();
-                Object obj = tContainer.new TStatement(finalMOutput.lineNumber)
+                Object obj = new TStatement(finalMOutput.lineNumber)
                         .parse(cond);
                 if (Validate.isValidBoolInput(obj)) {
-                    obj = obj instanceof Token<?> ? ((Token<?>) obj).getValue() : obj;
+                    obj = obj instanceof Token<?> ? ((Token<?>) obj).value() : obj;
                 } else {
                     throw new TypeMismatchException(
                             "Ayo the condition in the if (" + cond + ") gotta resolve to a boolean dawg.",
                             finalMOutput.lineNumber);
                 }
-                specific = tContainer.new TIfStatement(obj, codeblock, finalMOutput.lineNumber).toToken();
+                specific = new TIfStatement(obj, codeblock, finalMOutput.lineNumber).toToken();
                 if (line.contains(Keywords.ELSE)) {
                     return new BlockChain(specific, line.replaceFirst(Chars.BLOCK_CLOSE, "").trim());
                 }
                 break;
             }
             case "zama zama": {
-                specific = tContainer.new TTryCatchStatement(codeblock, finalMOutput.lineNumber).toToken();
+                specific = new TTryCatchStatement(codeblock, finalMOutput.lineNumber).toToken();
                 return new BlockChain(specific, line.replaceFirst(Chars.BLOCK_CLOSE, "").trim());
             }
             case "chaai": {
                 TTryCatchStatement tryCatch = ((TTryCatchStatement) ((MultipleLinesOutput) multipleLinesOutput).specialArg
-                        .getValue());
+                        .value());
                 tryCatch.appendCatchBlock(codeblock);
                 specific = tryCatch.toToken();
                 break;
@@ -297,41 +299,41 @@ public class Tokenizer {
                 String cond = args[0].replaceFirst(Pattern.quote(Character.toString(Chars.STATEMENT_OPEN)),
                         Matcher.quoteReplacement(" ")).trim();
                 if (!args[2].equals(Keywords.FOR_EACH)) {
-                    TokenDefault var = (TokenDefault) ((ArrayList<Token<?>>) readLine(
+                    TokenDefault var = (TokenDefault) ((ArrayList<Token<?>>) Objects.requireNonNull(readLine(
                             Keywords.D_VAR + " "
                                     + cond
                                     + Character.toString(Chars.END_LINE),
                             "", null,
-                            null, finalMOutput.lineNumber, config))
-                            .get(0).getValue();
+                            null, finalMOutput.lineNumber, config)))
+                            .getFirst().value();
 
-                    Object obj = tContainer.new TStatement(finalMOutput.lineNumber).parse(args[1]);
+                    Object obj = new TStatement(finalMOutput.lineNumber).parse(args[1]);
                     if (Validate.isValidBoolInput(obj)) {
-                        obj = obj instanceof Token<?> ? ((Token<?>) obj).getValue() : obj;
+                        obj = obj instanceof Token<?> ? ((Token<?>) obj).value() : obj;
                     } else {
                         throw new TypeMismatchException(
                                 "Ayo the condition in the colonize (" + cond + ") gotta resolve to a boolean dawg.",
                                 finalMOutput.lineNumber);
                     }
-                    specific = tContainer.new TForLoop(
-                            var instanceof TUnknownVar ? (TUnknownVar) var : (TNumberVar) var, obj,
+                    specific = new TForLoop(
+                            var instanceof TUnknownVar ? (TUnknownVar<?>) var : (TNumberVar) var, obj,
                             args[2].replace(Chars.STATEMENT_CLOSE, ' ').trim(),
                             codeblock, finalMOutput.lineNumber).toToken();
                 } else {
-                    TUnknownVar variable = (Token<TUnknownVar>.TUnknownVar<?>) ((ArrayList<Token<?>>) readLine(
+                    TUnknownVar<?> variable = (TUnknownVar<?>) ((ArrayList<Token<?>>) Objects.requireNonNull(readLine(
                             Keywords.D_VAR + " "
-                                    + args[0].replaceFirst("\\" + Character.toString(Chars.STATEMENT_OPEN), " ").trim()
+                                    + args[0].replaceFirst("\\" + Chars.STATEMENT_OPEN, " ").trim()
                                     + Chars.END_LINE,
                             "",
                             null, null,
-                            finalMOutput.lineNumber, config))
-                            .get(0).getValue();
-                    TVarRef arrayVar = (Token<TVarRef>.TVarRef) ((Token<?>) tContainer.processContext(args[1]
-                            .replace(Chars.STATEMENT_CLOSE, ' ')
-                            .trim(),
-                            finalMOutput.lineNumber))
-                            .getValue();
-                    specific = tContainer.new TForLoop(variable, arrayVar, codeblock,
+                            finalMOutput.lineNumber, config)))
+                            .getFirst().value();
+                    TVarRef arrayVar = (TVarRef) ((Token<?>) Objects.requireNonNull(Token.processContext(args[1]
+                                    .replace(Chars.STATEMENT_CLOSE, ' ')
+                                    .trim(),
+                            finalMOutput.lineNumber)))
+                            .value();
+                    specific = new TForLoop(variable, arrayVar, codeblock,
                             finalMOutput.lineNumber).toToken();
                 }
                 break;
@@ -345,19 +347,19 @@ public class Tokenizer {
                 if (!IVSN.isValid)
                     throw new MalformedSyntaxException(
                             IVSN.op + " cannot be used in a variable name zawg.", finalMOutput.lineNumber);
-                specific = tContainer.new TFunction(args[0], fArgs, codeblock, finalMOutput.lineNumber).toToken();
+                specific = new TFunction(args[0], fArgs, codeblock, finalMOutput.lineNumber).toToken();
                 break;
             }
             case "nikhil": {
-                Object obj = tContainer.new TStatement(finalMOutput.lineNumber).parse(args[0]);
+                Object obj = new TStatement(finalMOutput.lineNumber).parse(args[0]);
                 if (Validate.isValidBoolInput(obj)) {
-                    obj = obj instanceof Token<?> ? ((Token<?>) obj).getValue() : obj;
+                    obj = obj instanceof Token<?> ? ((Token<?>) obj).value() : obj;
                 } else {
                     throw new TypeMismatchException(
                             "Ayo the condition in the colonize " + args[0] + " gotta resolve to a boolean dawg.",
                             finalMOutput.lineNumber);
                 }
-                specific = tContainer.new TWhileLoop(obj, codeblock, finalMOutput.lineNumber).toToken();
+                specific = new TWhileLoop(obj, codeblock, finalMOutput.lineNumber).toToken();
                 break;
             }
             default: {
@@ -379,16 +381,15 @@ public class Tokenizer {
      *
      * @param line       The line to handle the variable declaration and assignment
      *                   for.
-     * @param tContainer The token container.
      * @param lineNumber The line number of the line.
      * @return The token for the given line.
      */
-    private static Token<?> processVariable(String line, Token<?> tContainer, int lineNumber)
+    private static Token<?> processVariable(String line, int lineNumber)
             throws TokenizerException {
         boolean isString = false;
-        if (line.indexOf(Chars.ARRAY_ASSIGNMENT) != -1) {
+        if (line.contains(Chars.ARRAY_ASSIGNMENT)) {
             line = line.trim();
-            line = line.substring(4, line.length());
+            line = line.substring(4);
             String[] parts = line.split("<-\\|");
             parts[0] = parts[0].trim();
             if (parts[0].isEmpty()) {
@@ -399,13 +400,13 @@ public class Tokenizer {
 
             if (parts.length == 1) {
                 // delcared with no value, empty array.
-                return tContainer.new TArrayVar(parts[0], parsedValues, lineNumber).toToken();
+                return new TArrayVar(parts[0], parsedValues, lineNumber).toToken();
             }
 
-            tContainer.splitByTopLevelComma(parts[1]).forEach(value -> {
-                parsedValues.add(tContainer.processContext(value.trim(), lineNumber));
+            Token.splitByTopLevelComma(parts[1]).forEach(value -> {
+                parsedValues.add(Token.processContext(value.trim(), lineNumber));
             });
-            return tContainer.new TArrayVar(parts[0], parsedValues, lineNumber).toToken();
+            return new TArrayVar(parts[0], parsedValues, lineNumber).toToken();
 
         }
         int stringStart = line.indexOf(Chars.STRING);
@@ -419,7 +420,7 @@ public class Tokenizer {
             line = line.substring(0, stringStart - 1) + encasedString;
         }
         line = line.trim();
-        line = line.substring(4, line.length());
+        line = line.substring(4);
         String[] parts = line.split(Chars.ASSIGNMENT);
         parts[0] = parts[0].trim();
         IsValidSymbolName IVSN = Validate.isValidSymbolName(parts[0]);
@@ -432,44 +433,44 @@ public class Tokenizer {
                 throw new MalformedSyntaxException(
                         "Bro defined a variable on line " + lineNumber + " with no name lmao.", lineNumber);
             }
-            if (parts.length == 1 && line.indexOf(Chars.ASSIGNMENT) != -1)
+            if (line.contains(Chars.ASSIGNMENT))
                 throw new MalformedSyntaxException(
                         "if you're finna define a variable without a value, remove the assignment operator.",
                         lineNumber);
-            return tContainer.new TUnknownVar<Object>(parts[0], tContainer.new TVoidValue(lineNumber), lineNumber)
+            return new TUnknownVar<Object>(parts[0], new Token.TVoidValue(lineNumber), lineNumber)
                     .toToken();
         }
         parts[1] = parts[1].trim();
 
         if (isString) {
-            return tContainer.new TStringVar(parts[0], parts[1], lineNumber).toToken();
+            return new TStringVar(parts[0], parts[1], lineNumber).toToken();
         } else {
             try {
-                return tContainer.new TNumberVar(parts[0], Token.parseIntegerLiteral(parts[1]), lineNumber).toToken();
+                return new TNumberVar(parts[0], Token.parseIntegerLiteral(parts[1]), lineNumber).toToken();
             } catch (NumberFormatException e) {
                 try {
-                    return tContainer.new TNumberVar(parts[0], Double.parseDouble(parts[1]), lineNumber).toToken();
+                    return new TNumberVar(parts[0], Double.parseDouble(parts[1]), lineNumber).toToken();
                 } catch (Exception e2) {
                     if (parts[1].equals("true") || parts[1].equals("false") || parts[1].equals(Keywords.TRUE)
                             || parts[1].equals(Keywords.FALSE)) {
                         parts[1] = parts[1].replace(Keywords.TRUE, "true").replace(
                                 Keywords.FALSE,
                                 "false");
-                        return tContainer.new TBooleanVar(parts[0], Boolean.parseBoolean(parts[1]),
+                        return new TBooleanVar(parts[0], Boolean.parseBoolean(parts[1]),
                                 lineNumber).toToken();
                     } else {
-                        Object output = tContainer.dispatchContext(parts[1], lineNumber);
+                        Object output = Token.dispatchContext(parts[1], lineNumber);
                         if (output instanceof Token<?>) {
-                            TokenDefault g = ((Token<?>) output).getValue();
+                            TokenDefault g = ((Token<?>) output).value();
                             if (g.name.equals("TStatement")) {
-                                return ((Token<?>.TStatement) g).statementType == 0
-                                        ? tContainer.new TBooleanVar(parts[0], output,
+                                return ((TStatement) g).statementType == 0
+                                        ? new TBooleanVar(parts[0], output,
                                                 lineNumber).toToken()
-                                        : tContainer.new TNumberVar(parts[0], output, lineNumber).toToken();
+                                        : new TNumberVar(parts[0], output, lineNumber).toToken();
                             }
                         }
 
-                        return tContainer.new TUnknownVar<Object>(parts[0], output, lineNumber).toToken();
+                        return new TUnknownVar<Object>(parts[0], output, lineNumber).toToken();
                     }
                 }
             }
@@ -484,12 +485,11 @@ public class Tokenizer {
      * method.
      *
      * @param line       The line to handle the import statement for.
-     * @param tContainer The token container.
      * @param lineNumber The line number of the line.
      * @param config     Tokenizer configuration
      * @return The token for the given line.
      */
-    private static Token<?> handleImport(String line, Token<?> tContainer, int lineNumber, TConfig config)
+    private static Token<?> handleImport(String line, int lineNumber, TConfig config)
             throws TokenizerException {
         // tsea "path"
         // tsea "path" <- funcz, funca
@@ -500,7 +500,7 @@ public class Tokenizer {
         String[] parts = line.split(Chars.ASSIGNMENT);
 
         ArrayList<Tuple2<Integer, Integer>> quotepairs = Find.quotationPairs(line);
-        if (quotepairs.size() == 0) {
+        if (quotepairs.isEmpty()) {
             throw new MalformedSyntaxException(
                     "Bro, the file to take from has to be surrounded by qutoes.", lineNumber);
 
@@ -527,7 +527,7 @@ public class Tokenizer {
         // config.JAIVA_SRC + "lib" as a the new prefix
         // TODO: Use Path to handle the / and \
         if (path.startsWith("jaiva/") || path.startsWith("jaiva\\")) {
-            isLib = !isLib;
+            isLib = true;
             path = path.replaceFirst("jaiva[/\\\\]", "");
             pObj = Path.of(config.JAIVA_SRC).resolve("lib/").resolve(path).normalize().toAbsolutePath();
             path = pObj.toString();
@@ -546,9 +546,9 @@ public class Tokenizer {
             ArrayList<String> args = new ArrayList<>();
             for (String arg : parts[1].trim().split(Character.toString(Chars.ARGS_SEPARATOR)))
                 args.add(arg.trim());
-            return tContainer.new TImport(path, fileName, isLib, args, lineNumber).toToken();
+            return new Token.TImport(path, fileName, isLib, args, lineNumber).toToken();
         } else {
-            return tContainer.new TImport(path, fileName, isLib, lineNumber).toToken();
+            return new Token.TImport(path, fileName, isLib, lineNumber).toToken();
         }
     }
 
@@ -599,29 +599,34 @@ public class Tokenizer {
 
         // To the developer who would like to understand this.
         // Don't. Just don't. It's a mess. I am NOT sorry.
-        String type = multipleLinesOutput != null ? ((MultipleLinesOutput) multipleLinesOutput).b_type
-                : line.startsWith(Keywords.IF) ? Keywords.IF
-                        : line.startsWith(Keywords.D_FUNCTION) ? Keywords.D_FUNCTION
-                                : line.startsWith(Keywords.FOR) ? Keywords.FOR
-                                        : line.startsWith(Keywords.WHILE) ? Keywords.WHILE
-                                                : line.replace(Chars.BLOCK_CLOSE, "").trim()
-                                                        .startsWith(Keywords.ELSE + " " + Keywords.IF)
-                                                                ? Keywords.ELSE + " " + Keywords.IF // check for "ELSE
-                                                                                                    // IF"
-                                                                                                    // before
-                                                                                                    // checking for "IF"
-                                                                : line.replace(Chars.BLOCK_CLOSE, "").trim()
-                                                                        .startsWith(Keywords.ELSE) ? Keywords.ELSE
-                                                                                : line.startsWith(Keywords.TRY)
-                                                                                        ? Keywords.TRY
-                                                                                        : line.replace(
-                                                                                                Chars.BLOCK_CLOSE,
-                                                                                                "")
-                                                                                                .trim()
-                                                                                                .startsWith(
-                                                                                                        Keywords.CATCH)
-                                                                                                                ? Keywords.CATCH
-                                                                                                                : null;
+        String type;
+        if (multipleLinesOutput != null) {
+            assert multipleLinesOutput instanceof MultipleLinesOutput;
+            type = ((MultipleLinesOutput) multipleLinesOutput).b_type;
+        } else {
+            type = line.startsWith(Keywords.IF) ? Keywords.IF
+                    : line.startsWith(Keywords.D_FUNCTION) ? Keywords.D_FUNCTION
+                            : line.startsWith(Keywords.FOR) ? Keywords.FOR
+                                    : line.startsWith(Keywords.WHILE) ? Keywords.WHILE
+                                            : line.replace(Chars.BLOCK_CLOSE, "").trim()
+                                                    .startsWith(Keywords.ELSE + " " + Keywords.IF)
+                                                            ? Keywords.ELSE + " " + Keywords.IF // check for "ELSE
+                                                                                                // IF"
+                                                                                                // before
+                                                                                                // checking for "IF"
+                                                            : line.replace(Chars.BLOCK_CLOSE, "").trim()
+                                                                    .startsWith(Keywords.ELSE) ? Keywords.ELSE
+                                                                            : line.startsWith(Keywords.TRY)
+                                                                                    ? Keywords.TRY
+                                                                                    : line.replace(
+                                                                                            Chars.BLOCK_CLOSE,
+                                                                                            "")
+                                                                                            .trim()
+                                                                                            .startsWith(
+                                                                                                    Keywords.CATCH)
+                                                                                                            ? Keywords.CATCH
+                                                                                                            : null;
+        }
 
         if ((line.contains(Chars.BLOCK_OPEN) && line.indexOf(Chars.BLOCK_OPEN) < line.indexOf("\n")) && type == null
                 && !line.startsWith(Character.toString(Chars.COMMENT)))
@@ -631,14 +636,15 @@ public class Tokenizer {
                     line.split(" ")[0] + " aint a real keyword homie.", lineNumber);
 
         ArrayList<Token<?>> tokens = new ArrayList<>();
-        Token<?> tContainer = new Token<>(null);
+//        Token<?> tContainer = new Token<>(null);
         boolean containsNewln = line.contains("\n");
         String[] ls = containsNewln ? line.split("\n")
                 : line.split("(?<!\\$)!(?!\\=)");
         String[] lines = Comments.decimate(ls);
 
+//        if (lines.length > 1) {
         if (lines.length > 1 || ((lines.length == 2 && !lines[1].isEmpty()) && !Comments.arrayIsOnlyComments(lines))) {
-            // multiple lines.
+//            // multiple lines.
             MultipleLinesOutput m = null;
             BlockChain b = null;
             String comment = null;
@@ -646,7 +652,7 @@ public class Tokenizer {
             for (int i = 0; i != ls.length; i++) {
                 ln = lineNumber + i;
                 String l = "";
-                if (b instanceof BlockChain) {
+                if (b != null) {
                     l = b.getCurrentLine();
                     i--;
                     ln--;
@@ -655,61 +661,69 @@ public class Tokenizer {
                 }
                 String previousLine2 = i == 0 ? previousLine : ls[i - 1];
                 Object something = readLine(l, previousLine2, m, b, ln, config);
-                if (something instanceof MultipleLinesOutput) {
-                    m = ((MultipleLinesOutput) something);
-                    b = null;
-                } else if (something instanceof ArrayList<?>) {
-                    m = null;
-                    b = null;
-                    if (((ArrayList<Token<?>>) something).size() == 1) {
-                        for (Token<?> t : (ArrayList<Token<?>>) something) {
-                            TokenDefault g = t.getValue();
-                            if (comment == null || (!(g instanceof TArrayVar) && !(g instanceof TNumberVar)
-                                    && !(g instanceof TStringVar)
-                                    && !(g instanceof TBooleanVar) && !(g instanceof TUnknownVar)
-                                    && !(g instanceof TFunction)))
-                                continue;
-                            g.tooltip = comment != null ? comment : g.tooltip;
-                            g.json.removeKey("toolTip");
-                            g.json.append("toolTip", EscapeSequence.escapeJson(comment).trim(), true);
+                switch (something) {
+                    case MultipleLinesOutput linesOutput -> {
+                        m = linesOutput;
+                        b = null;
+                    }
+                    case ArrayList<?> objects -> {
+                        m = null;
+                        b = null;
+                        if (((ArrayList<Token<?>>) something).size() == 1) {
+                            for (Token<?> t : (ArrayList<Token<?>>) something) {
+                                TokenDefault g = t.value();
+                                if (comment == null || (!(g instanceof TArrayVar) && !(g instanceof TUnknownVar)
+                                        && !(g instanceof TFunction)))
+                                    continue;
+                                g.tooltip = comment;
+                                g.json.removeKey("toolTip");
+                                g.json.append("toolTip", EscapeSequence.escapeJson(comment).trim(), true);
+                            }
+
                         }
-
+                        comment = null;
+                        tokens.addAll((ArrayList<Token<?>>) something);
                     }
-                    comment = null;
-                    tokens.addAll((ArrayList<Token<?>>) something);
-                } else if (something instanceof BlockChain) {
-                    m = null;
-                    comment = null;
-                    b = (BlockChain) something;
-                } else if (something instanceof Token<?> && ((Token<?>) something).getValue() instanceof TDocsComment) {
-                    b = null;
-                    m = null;
-                    comment = (comment == null ? "" : comment)
-                            + ((TDocsComment) ((Token<?>) something).getValue()).comment;
-                } else if (something instanceof Token<?>) {
-                    TokenDefault t = ((TokenDefault) ((Token<?>) something).getValue());
-                    t.tooltip = comment != null ? comment : t.tooltip;
-
-                    if (comment != null
-                            && ((t instanceof TArrayVar) || (t instanceof TNumberVar) || (t instanceof TStringVar)
-                                    || (t instanceof TBooleanVar) || (t instanceof TUnknownVar)
-                                    || (t instanceof TFunction))) {
-
+                    case BlockChain chain -> {
+                        m = null;
+                        comment = null;
+                        b = chain;
+                    }
+                    case Token<?> token when token.value() instanceof TDocsComment -> {
+                        b = null;
+                        m = null;
+                        comment = (comment == null ? "" : comment)
+                                + ((TDocsComment) token.value()).comment;
+                    }
+                    case Token<?> token -> {
+                        TokenDefault t = ((TokenDefault) token.value());
                         t.tooltip = comment != null ? comment : t.tooltip;
-                        t.json.removeKey("toolTip");
-                        t.json.append("toolTip", EscapeSequence.escapeJson(comment).trim(), true);
+
+                        if (comment != null
+                                && ((t instanceof TArrayVar) || (t instanceof TUnknownVar)
+                                || (t instanceof TFunction))) {
+
+                            t.tooltip = comment;
+                            t.json.removeKey("toolTip");
+                            t.json.append("toolTip", EscapeSequence.escapeJson(comment).trim(), true);
+                        }
+                        tokens.add(token);
+                        m = null;
+                        b = null;
+                        comment = null;
                     }
-                    tokens.add((Token<?>) something);
-                    m = null;
-                    b = null;
-                    comment = null;
-                } else {
-                    m = null;
-                    b = null;
-                    comment = null;
+                    case null, default -> {
+                        m = null;
+                        b = null;
+                        comment = null;
+                    }
                 }
             }
             return tokens;
+        } else {
+            //            if ((lines.length == 2 && !lines[1].isEmpty())) {
+//                Comments.arrayIsOnlyComments(lines);
+//            }
         }
         String tokenizerLine = previousLine.trim() + line; // The entire line to the tokenizer.
 
@@ -722,18 +736,17 @@ public class Tokenizer {
          * and block stuff
          */
         if (cont || isComment || isCodeBlock) {
-            Object k = type == null
+            return type == null
                     ? processBlockLines(isComment, line, (MultipleLinesOutput) multipleLinesOutput,
                             tokenizerLine,
-                            tokens, tContainer, type,
+                            tokens, type,
                             new String[] { "" }, null, lineNumber, config)
                     : processBlockLines(
                             isComment, line, (MultipleLinesOutput) multipleLinesOutput, tokenizerLine,
-                            tokens, tContainer, type,
+                            tokens, type,
                             multipleLinesOutput == null ? handleArgs(type, line, lineNumber) : null,
                             (blockChain != null ? blockChain.getInitialIf() : null),
                             lineNumber, config);
-            return k;
         }
 
         // if its anything after this the line has to end in a ! or else invalid syntax.
@@ -755,52 +768,40 @@ public class Tokenizer {
                     "Ayo, you got some unclosed braces in your code. Fix that bro wtf.", lineNumber);
         // END OF NEW CODE
 
-        if (!line.isEmpty() && !line.equals(Chars.BLOCK_CLOSE) && !line.endsWith(Chars.BLOCK_OPEN)
-                && (!line.endsWith(Character.toString(Chars.END_LINE)))) {
+        if (!line.equals(Chars.BLOCK_CLOSE) && !line.endsWith(Chars.BLOCK_OPEN) && !line.endsWith(Character.toString(Chars.END_LINE))) {
             throw new MalformedSyntaxException(
                     "Ye wena. You don't shout your code. Sies.", lineNumber);
         }
 
-        line = line.isEmpty() ? line : line.substring(0, line.length() - 1);
+        line = line.substring(0, line.length() - 1);
 
         if (line.startsWith(Keywords.IMPORT.get(0)) || line.startsWith(Keywords.IMPORT.get(1)))
-            return handleImport(line, tContainer, lineNumber, config);
+            return handleImport(line, lineNumber, config);
 
         // #STRING# is (khutla 100!) syntax which is a function return.
 
         if (line.startsWith(Keywords.THROW)) {
             // Remove keyword 'cima' and operator '<=='
             line = line.trim();
-            String withoutKeyword = line.substring(Keywords.THROW.length()).trim();
-            // Split on the operator "<=="
-            String[] parts = withoutKeyword.split(Chars.THROW_ERROR);
-            if (parts.length != 2)
-                throw new TokenizerException.MalformedSyntaxException(
-                        "Ehh baba you must use the right syntax if u wanna cima this process.", lineNumber);
+            String errorMessage = getString(line, lineNumber);
 
-            String errorMessage = parts[1].trim();
-            if (errorMessage.startsWith("\"") && errorMessage.endsWith("\"") && errorMessage.length() >= 2)
-                errorMessage = errorMessage.substring(1, errorMessage.length() - 1);
-
-            tokens.add(tContainer.new TThrowError(errorMessage, lineNumber).toToken());
+            tokens.add(new TThrowError(errorMessage, lineNumber).toToken());
             return tokens;
         }
 
         line = line.trim();
 
         if (line.startsWith(Keywords.LC_BREAK) || line.startsWith(Keywords.LC_CONTINUE))
-            switch (line) {
-                case "voetsek", "nevermind":
-                    return tContainer.new TLoopControl(line, lineNumber).toToken();
-                default:
-                    throw new MalformedSyntaxException(
-                            "Loop control keywords should be by themselves big bro. Remove whatever is on line ",
-                            lineNumber);
-            }
+            return switch (line) {
+                case "voetsek", "nevermind" -> new TLoopControl(line, lineNumber).toToken();
+                default -> throw new MalformedSyntaxException(
+                        "Loop control keywords should be by themselves big bro. Remove whatever is on line ",
+                        lineNumber);
+            };
 
         if (line.startsWith(Keywords.RETURN)) {
             tokens.add(
-                    tContainer.new TFuncReturn(tContainer.processContext(line.replace(Keywords.RETURN, ""),
+                    new TFuncReturn(Token.processContext(line.replace(Keywords.RETURN, ""),
                             lineNumber),
                             lineNumber)
                             .toToken());
@@ -810,7 +811,7 @@ public class Tokenizer {
         // #STRING# is a line which contains something that needs to be tokenized.
 
         if (line.startsWith(Keywords.D_VAR)) {
-            tokens.add(processVariable(line, tContainer, lineNumber));
+            tokens.add(processVariable(line, lineNumber));
             return tokens;
         }
 
@@ -818,15 +819,15 @@ public class Tokenizer {
         String[] parts = line.split(Chars.ASSIGNMENT);
         if (parts.length > 1) {
             String varName = parts[0].trim();
-            Object varValue = tContainer.processContext(parts[1].trim(), lineNumber);
+            Object varValue = Token.processContext(parts[1].trim(), lineNumber);
             if (varName.contains("]") || varName.contains("[")) {
                 // This is an array reassignment.
-                tokens.add(tContainer.new TVarReassign(tContainer.processContext(varName,
+                tokens.add(new TVarReassign(Token.processContext(varName,
                         lineNumber), varValue, lineNumber).toToken());
                 return tokens;
             } else
                 tokens.add(
-                        tContainer.new TVarReassign(parts[0].trim(), tContainer.processContext(parts[1].trim(),
+                        new TVarReassign(parts[0].trim(), Token.processContext(parts[1].trim(),
                                 lineNumber),
                                 lineNumber)
                                 .toToken());
@@ -836,7 +837,7 @@ public class Tokenizer {
 
         // TODO: This token only exists for debugging purposes at the moment.
         if (line.equals(Keywords.UNDEFINED)) {
-            tokens.add(tContainer.new TVoidValue(lineNumber).toToken());
+            tokens.add(new Token.TVoidValue(lineNumber).toToken());
             return tokens;
         }
 
@@ -844,7 +845,7 @@ public class Tokenizer {
         // TFuncCall
         // (You cant just place a variable out of nowhere with no context around it.)
         // (Therefore i wont parse it.)
-        Object token = tContainer.processContext(line, lineNumber);
+        Object token = Token.processContext(line, lineNumber);
         if (token instanceof Token<?>) {
             tokens.add((Token<?>) token);
             return tokens;
@@ -853,5 +854,19 @@ public class Tokenizer {
         // Last resort: Don't fucking know what this line is supposed to tokenize as
         // Therefore:
         return void.class;
+    }
+
+    private static String getString(String line, int lineNumber) throws MalformedSyntaxException {
+        String withoutKeyword = line.substring(Keywords.THROW.length()).trim();
+        // Split on the operator "<=="
+        String[] parts = withoutKeyword.split(Chars.THROW_ERROR);
+        if (parts.length != 2)
+            throw new MalformedSyntaxException(
+                    "Ehh baba you must use the right syntax if u wanna cima this process.", lineNumber);
+
+        String errorMessage = parts[1].trim();
+        if (errorMessage.startsWith("\"") && errorMessage.endsWith("\"") && errorMessage.length() >= 2)
+            errorMessage = errorMessage.substring(1, errorMessage.length() - 1);
+        return errorMessage;
     }
 }
